kubernetes/gke/frontend/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: agama
spec:
  replicas: 1 # 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: rusxl/agama-frontend:1b838373e4cd1448e5c7cb7c4f194b5d5316a3a2
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
