kubernetes/gke/frontend/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: agama
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
